--- a/web/static/css/shared.css
+++ b/web/static/css/shared.css
@@ -461,10 +461,14 @@ input[type="number"] {
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     z-index: 1000;
+}
+
+.modal-overlay.visible {
+    display: flex;
 }
 
 .modal-overlay.hidden {
