--- a/web/static/css/manage_links.css
+++ b/web/static/css/manage_links.css
@@ -193,6 +193,7 @@
     padding: 0.375rem 1.2rem;
     font-size: 0.875rem;
     background: #9FCFC0;
+    color: #1F2937;
     text-decoration: none;
     border-radius: 0.375rem;
     border: none;
@@ -203,6 +204,7 @@
 
 .btn-edit-link:hover {
     background: #8AC4B3;
+    color: #1F2937;
 }
 
 .btn-delete-link {
