--- a/web/templates/add_edit_type.html
+++ b/web/templates/add_edit_type.html
@@ -87,7 +87,7 @@
 </div>
 
 <!-- Delete confirmation modal -->
-<div id="deleteModal" class="modal-overlay hidden">
+<div id="deleteModal" class="modal-overlay">
     <div class="modal-content">
         <h3>Delete Client Type?</h3>
         <p>Are you sure you want to delete this type? This action cannot be undone.</p>
@@ -99,7 +99,7 @@
 </div>
 
 <!-- Error Modal -->
-<div id="errorModal" class="modal-overlay hidden">
+<div id="errorModal" class="modal-overlay">
     <div class="modal-content error-modal-content">
         <h3>Cannot Delete Type</h3>
         <p id="error-message"></p>
