--- a/web/templates/deleted_clients.html
+++ b/web/templates/deleted_clients.html
@@ -13,7 +13,7 @@
             <h2><i data-lucide="archive" class="page-icon"></i>Deleted Clients</h2>
             <p class="page-subtitle">Records of deleted client files retained for audit purposes</p>
         </div>
-        <a href="{{ url_for('clients.index') }}" class="btn"><i data-lucide="arrow-left" style="width: 16px; height: 16px;"></i> Back</a>
+        <a href="{{ url_for('clients.index') }}" class="btn"><i data-lucide="arrow-left" class="icon-md"></i> Back</a>
     </div>
     
     {% if deleted %}
